[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography"]
description = "An implementation for the Frost Distributed Key Generation protocol"
documentation = "https://docs.rs/frost-dkg"
edition = "2021"
exclude = ["tests/**", "benches/**", "examples/**", ".github/**"]
homepage = "https://crates.io/crates/frost-dkg"
keywords = ["dkg", "key", "generation", "distributed", "frost"]
license = "Apache-2.0 OR MIT"
name = "frost-dkg"
readme = "README.md"
repository = "https://github.com/mikelodder7/frost-dkg"
version = "0.4.0"

[features]
default = ["bls", "curve25519", "jubjub", "ed448", "k256", "p256", "p384"]
bls = ["blsful", "sha2"]
curve25519 = ["vsss-rs/curve25519", "sha2", "curve25519-dalek-ml"]
ed448 = ["ed448-goldilocks-plus", "sha3"]
k256 = ["dep:k256", "sha2"]
p256 = ["dep:p256", "sha2"]
p384 = ["dep:p384", "sha2"]
jubjub = ["jubjub-plus", "blake2"]

[dependencies]
elliptic-curve = { version = "0.13", features = ["hash2curve"] }
elliptic-curve-tools = { version = "0.1", features = ["std"] }
merlin = "3"
rand_core = { version = "0.6", features = ["std"] }
serde = "1.0"
thiserror = "2.0"
postcard = { version = "1.1", features = ["use-std"] }
vsss-rs = "5.1"
# Fix issue with cc for now, hardcord to 1.2.14
cc = "=1.2.14"

blsful = { version = "3.0.0-pre8", optional = true }
curve25519-dalek-ml = { version = "4.3", optional = true }
ed448-goldilocks-plus = { version = "0.16", optional = true }
jubjub-plus = { version = "0.10", optional = true }
k256 = { version = "0.13", features = ["arithmetic", "hash2curve", "bits"], optional = true }
p256 = { version = "0.13", features = ["arithmetic", "hash2curve", "bits"], optional = true }
p384 = { version = "0.13", features = ["arithmetic", "hash2curve", "bits"], optional = true }
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
blake2 = { version = "0.10", optional = true }

[dev-dependencies]
blsful = "3.0.0-pre8"
ed448-goldilocks-plus = "0.16"
k256 = { version = "0.13", features = ["arithmetic"] }
p256 = { version = "0.13", features = ["arithmetic"] }
p384 = { version = "0.13", features = ["arithmetic"] }
jubjub-plus = "0.10"
rand_chacha = "0.3"
rand_core = "0.6"
rstest = "0.24"
vsss-rs = { version = "5.1.0", features = ["curve25519"] }
