[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography"]
description = "An implementation for the Frost Distributed Key Generation protocol"
documentation = "https://docs.rs/frost-dkg"
edition = "2024"
exclude = ["tests/**", "benches/**", "examples/**", ".github/**"]
homepage = "https://crates.io/crates/frost-dkg"
keywords = ["dkg", "key", "generation", "distributed", "frost"]
license = "Apache-2.0 OR MIT"
name = "frost-dkg"
readme = "README.md"
repository = "https://github.com/mikelodder7/frost-dkg"
version = "0.6.0-rc0"

[features]
default = ["ed448", "k256", "p256", "p384"]
ed448 = ["ed448-goldilocks-plus", "sha3", "shake"]
k256 = ["dep:k256", "sha2"]
p256 = ["dep:p256", "sha2"]
p384 = ["dep:p384", "sha2"]

[dependencies]
elliptic-curve = "0.14.1"
elliptic-curve-tools = { version = "0.3.0", features = ["std"] }
hash2curve = "0.14.0"
hex = "0.4"
merlin = "3"
rand = "0.10"
rand_core = "0.10"
serde = "1.0"
thiserror = "2.0"
postcard = { version = "1.1", features = ["use-std"] }
vsss-rs = "6.0.0-rc1"

ed448-goldilocks-plus = { version = "0.17.0", optional = true }
k256 = { version = "0.14.0-rc.15", features = ["arithmetic", "hash2curve"], optional = true }
p256 = { version = "0.14.0-rc.15", features = ["arithmetic", "hash2curve"], optional = true }
p384 = { version = "0.14.0-rc.15", features = ["arithmetic", "hash2curve"], optional = true }
sha2 = { version = "0.11", optional = true }
sha3 = { version = "0.12", optional = true }
shake = { version = "0.1", optional = true }

[dev-dependencies]
ed448-goldilocks-plus = "0.17.0"
k256 = { version = "0.14.0-rc.15", features = ["arithmetic"] }
p256 = { version = "0.14.0-rc.15", features = ["arithmetic"] }
p384 = { version = "0.14.0-rc.15", features = ["arithmetic"] }
rand_chacha = "0.10"
rand_core = "0.10"
rstest = "0.26"
